# noventa

./: .gitignore  LEARNED.md  LICENSE  LLM.md  LOGGING_STRATEGY.md  README.md  THIRD_PARTY_NOTICES  TODO.md  build.py  isomorph.js  log_classification.md  plan.md  test_error.py
database/: env.py
framework/: Cargo.toml  LLM.md  build.rs  config.yaml  cookiecutter.json  db.py  tarpaulin-report.html
framework/.cargo/: config.toml
framework/src/: components.rs  config.rs  errors.rs  fileupload.rs  injection.js  logger.rs  lsp.rs  main.rs  routing.rs  session.rs  static_assets.rs
framework/src/actors/: component_renderer.rs  dev_websockets.rs  file_watcher.rs  health.rs  interpreter.rs  load_shedding.rs  manager.rs  mod.rs  orchestrator.rs  page_renderer.rs  renderer.rs  router.rs  session_manager.rs  ssg.rs  template_renderer.rs  ws_server.rs
framework/src/disco/: mod.rs  models.rs  server.rs  tools.rs
framework/src/disco/interactive_tools/: mod.rs  models.rs  parser.rs  runner.rs  session.rs
framework/src/disco/interactive_tools/tools_yaml/: api_integration_helper.yaml  config_explainer.yaml  database_migration_helper.yaml  dynamic_routing_explainer.yaml  new_page_creator.yaml  onboarding_guide.yaml
framework/src/disco/mcp/: mod.rs
framework/src/dom/: diff.rs  diff_test.rs  events.js  mod.rs  nanomorph.js  parser.rs
framework/src/dto/: mod.rs  python_request.rs  python_session.rs
framework/src/scripts/: devws.js  frontend.js  mod.rs  python_embed.rs  swup-form3.min.js  swup-head2.min.js  swup-preload3.min.js  swup-scroll4.min.js
framework/src/templates/: debug_error.html  dev_mode_index.html  mod.rs
framework/starter/: cookiecutter.json
framework/starter/hooks/: post_gen_project.py
framework/starter/{{cookiecutter.project_name}}/: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  config.yaml
framework/starter/{{cookiecutter.project_name}}/migrations/: env.py
framework/starter/{{cookiecutter.project_name}}/pages/: index.html
noventa-extension/: package-lock.json  package.json
noventa-extension/src/: extension.ts
page/components/counter/: counter_template.html
page/layouts/: base.html
page/pages/: counter.html  index.html  test.html
page/pages/other/[dynamic]/: index.html  test.html
pages/: test_redirect.html
python_package/: MANIFEST.in  README.md  pyproject.toml  setup.py
python_package/src/noventa/: __init__.py  cli.py
python_package/src/noventa.egg-info/: PKG-INFO  SOURCES.txt
python_package/src/noventa/starter/{{cookiecutter.project_name}}/: config.yaml
vscode-lsp-diagnostics-forwarder/: package.json
vscode-lsp-diagnostics-forwarder/src/: extension.ts
vscode_extension/: README.md  package-lock.json  package.json
vscode_extension/src/: extension.ts
web/: config.yaml
web/components/counter/: counter.html  counter.py  counter_logic.py  counter_models.py
web/components/hello/: hello.py
web/database/versions/: 50da46c3f55a_create_counter_table.py
web/pages/: counter.html  home.html  index.html
web/pages/other/[dynamic]/: index.html
web/tools/: component_generator.yaml  static_file_guide.yaml
