[package]
name = "noventa"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-multipart = "0.7.0"
actix-web = "4.11.0"
actix-web-actors = "4.3.0"
actix-files = "0.6.2"
pyo3 = { version = "0.26.0", features = ["auto-initialize", "multiple-pymethods"] }
pythonize = "0.26.0"
log = "0.4"
env_logger = "0.11.3"
minijinja = { version = "2.2.0", features = ["loader", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
futures-util = "0.3.31"
once_cell = "1.19.0"
walkdir = "2.5.0"
serde_urlencoded = "0.7.1"
uuid = { version = "1.8.0", features = ["v4"] }
serde_with = "3.8.1"
serde_yaml = "0.9"
lazy_static = "1.4.0"
num_cpus = "1.17.0"
clap = { version = "4.5.4", features = ["derive"] }
notify = "6.1.1"

[env]
PYO3_PYTHON = "/opt/anaconda3/envs/nogil/bin/python"

[build-dependencies]
pyo3-build-config = "0.22.0"
