[package]
name = "noventa"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-multipart = "0.7.0"
actix-web = { version = "4.11.0" }
actix-web-actors = "4.3.0"
actix-files = "0.6.2"
actix-session = { version = "0.11.0", features = ["cookie-session", "redis-session", "redis-session-rustls", "redis-pool"] }
rand = "0.8"
pyo3 = { version = "0.26.0", features = ["auto-initialize", "multiple-pymethods", "abi3", "abi3-py310"] }
pythonize = "0.26.0"
serde-pyobject = "0.7.0"
log = "0.4"
env_logger = "0.11.3"
minijinja = { version = "2.2.0", features = ["loader", "json", "builtins", "speedups"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
futures-util = "0.3.31"
once_cell = "1.19.0"
walkdir = "2.5.0"
serde_urlencoded = "0.7.1"
uuid = { version = "1.8.0", features = ["v4"] }
serde_with = "3.8.1"
serde_yaml = "0.9"
lazy_static = "1.4.0"
num_cpus = "1.17.0"
clap = { version = "4.5.4", features = ["derive"] }
notify = "6.1.1"
regex = "1.10.5"
scraper = "0.13.0"
ego-tree = "0.6.2"
async-trait = "0.1.80"
anyhow = "1.0.86"
deadpool-redis = "0.22.0"
path-clean = "1.0"
cfg-if = "1.0"
actix-rt = "2.11.0"
actix-http = { version = "3.11.2", features = ["ws"] }
chrono = "0.4.42"
colored = "3.0.0"
tower-lsp = { version = "0.20.0", features = ["proposed"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
dashmap = "6.1.0"

[env]
PYO3_PYTHON = "/opt/anaconda3/envs/nogil/bin/python"

[build-dependencies]
pyo3-build-config = "0.26"

[dev-dependencies]
tempfile = "3.23.0"
bytes = "1.10.1"
actix-test = "0.1.5"


[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "packed"
