[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noventa"
version = "0.1.0"
scripts = { "noventa" = "noventa.cli:main" }
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
noventa = ["starter/**/*", "noventa_bin/*"]