[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noventa"
version = "0.1.0a0"
authors = [
    { name = "Marcos Macedo" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cookiecutter==2.6.0",
    "SQLAlchemy==2.0.44",
    "alembic==1.17.0",
    "werkzeug==3.1.3",
]

[project.urls]
Homepage = "https://noventa.dev"

[project.scripts]
noventa = "noventa.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
noventa = ["starter/**/*", "noventa_bin/*"]